Fixed build error and many bugs